--- a/src/05/Lotto.module.css
+++ b/src/05/Lotto.module.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 .sp0, .sp1, .sp2, .sp3, .sp4 {
     display: inline-flex;
